--- a/css/custom.css
+++ b/css/custom.css
@@ -14,3 +14,12 @@
   position: relative;
   z-index: 2;
 }
+
+/* Gradient color1 - color2 - color1 */
+
+hr.style-one {
+  border: 2px;
+  height: 3px;
+  background: #333;
+  background-image: linear-gradient(to right, #ccc, #333, #ccc);
+}
